cargo-features = ["edition2021"]
[package]
edition = "2021"
name = "tos"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = "0.7.0"
spin = "0.7.1"

[profile.dev]
# https://doc.rust-lang.org/cargo/reference/profiles.html#dev
opt-level = 3
panic = "abort"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html#release
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"

[profile.test]
# https://doc.rust-lang.org/cargo/reference/profiles.html#test
opt-level = 3
panic = "abort"

[profile.bench]
# https://doc.rust-lang.org/cargo/reference/profiles.html#bench
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
